# ValoTox

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: agentacademy_comments_flat.csv  agentacademy_submissions_flat.csv  agentacademy_submissions_raw.jsonl  valorant_comments_flat.csv  valorant_submissions_flat.csv  valorantcompetitive_comments_flat.csv  valorantcompetitive_submissions_flat.csv
data/figures/: dataset_summary.csv
data/processed/: dataset_stats.json
valotox/: __init__.py  __main__.py  cli.py  config.py  eda.py  interactive_cli.py  lexicon.py  ui.py
valotox/agent/: __init__.py  graph.py  tools.py
valotox/annotation/: __init__.py  gpt4o_annotator.py  iaa.py  label_studio.py
valotox/api/: app.py
valotox/scraping/: __init__.py  data_pipeline.py  proxy_pool.py  reddit_scraper.py  twitter_scraper.py  vlr_scraper.py
